Updated titles, added subspecies tab for characters

--- a/masterlist.html
+++ b/masterlist.html
@@ -11,10 +11,10 @@
   <!-- About Your Site                                                   -->
   <!-- ----------------------------------------------------------------- -->
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-  <title>Charadex Masterlist</title>
-  <meta name="title" content="Charadex Masterlist" />
+  <title>Hearthoods Masterlist</title>
+  <meta name="title" content="Hearthoods Masterlist" />
   <meta name="type" content="website" />
-  <meta name="url" content="https://www.charadex.com/" />
+  <meta name="url" content="https://www.hearthoods.com/" />
   <meta name="image" content="assets/meta.png" />
   <meta name="description" content="A tool for organizing small ARPGs and species.">
 
@@ -253,6 +253,12 @@
                   <div class="d-flex no-gutters mb-2">
                     <b class="text-muted col-md-5 col-6">Species</b>
                     <span class="species"></span>
+                  </div>
+
+                  <!-- Item -->
+                  <div class="d-flex no-gutters mb-2">
+                    <b class="text-muted col-md-5 col-6">Subspecies</b>
+                    <span class="subspecies"></span>
                   </div>
     
                   <!-- Item -->
