--- a/faq.html
+++ b/faq.html
@@ -11,10 +11,10 @@
   <!-- About Your Site                                                   -->
   <!-- ----------------------------------------------------------------- -->
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-  <title>Charadex FAQ</title>
-  <meta name="title" content="Charadex FAQ" />
+  <title>Hearthoods FAQ</title>
+  <meta name="title" content="Hearthoods FAQ" />
   <meta name="type" content="website" />
-  <meta name="url" content="https://www.charadex.com/" />
+  <meta name="url" content="https://www.hearthoods.com/" />
   <meta name="image" content="assets/meta.png" />
   <meta name="description" content="A tool for organizing small ARPGs and species.">
 
