--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- About Your Site                                                   -->
   <!-- ----------------------------------------------------------------- -->
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-  <title>Charadex Inventories</title>
+  <title>Hearthoods Home</title>
   <meta name="title" content="Charadex Inventories" />
   <meta name="type" content="website" />
   <meta name="url" content="https://www.charadex.com/" />
@@ -66,13 +66,13 @@
       <!-- Hero Image & Title
       <!-- --------------------------------------------------------------- -->
       <div class="cd-hero-title mb-4" style="background-image: url('./assets/meta.png');">
-        <div class="m-auto">Charadex</div>
+        <div class="m-auto">Hearthoods</div>
       </div>
 
       <!-- Description
       <!-- --------------------------------------------------------------- -->
       <div class="px-4 text-muted">
-        <p>Write about your species...</p>
+        <p>What is left behind, stays behind..</p>
       </div>
 
       <!-- Links
