--- a/items.html
+++ b/items.html
@@ -11,10 +11,10 @@
   <!-- About Your Site                                                   -->
   <!-- ----------------------------------------------------------------- -->
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-  <title>Charadex Items</title>
-  <meta name="title" content="Charadex Items" />
+  <title>Hearthoods Items</title>
+  <meta name="title" content="Hearthoods Items" />
   <meta name="type" content="website" />
-  <meta name="url" content="https://www.charadex.com/" />
+  <meta name="url" content="https://www.hearthoods.com/" />
   <meta name="image" content="assets/meta.png" />
   <meta name="description" content="A tool for organizing small ARPGs and species.">
 
