--- a/prompts.html
+++ b/prompts.html
@@ -11,10 +11,10 @@
   <!-- About Your Site                                                   -->
   <!-- ----------------------------------------------------------------- -->
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-  <title>Charadex Prompts</title>
-  <meta name="title" content="Charadex Prompts" />
+  <title>Hearthoods Prompts</title>
+  <meta name="title" content="Hearthoods Prompts" />
   <meta name="type" content="website" />
-  <meta name="url" content="https://www.charadex.com/" />
+  <meta name="url" content="https://www.hearthoods.com/" />
   <meta name="image" content="assets/meta.png" />
   <meta name="description" content="A tool for organizing small ARPGs and species.">
 
