--- a/world.html
+++ b/world.html
@@ -11,10 +11,10 @@
   <!-- About Your Site                                                   -->
   <!-- ----------------------------------------------------------------- -->
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-  <title>Charadex World</title>
-  <meta name="title" content="Charadex World" />
+  <title>Hearthoods World</title>
+  <meta name="title" content="Hearthoods World" />
   <meta name="type" content="website" />
-  <meta name="url" content="https://www.charadex.com/" />
+  <meta name="url" content="https://www.hearthoodscom/" />
   <meta name="image" content="assets/meta.png" />
   <meta name="description" content="A tool for organizing small ARPGs and species.">
 
