edited search and added TH linking

--- a/masterlist.html
+++ b/masterlist.html
@@ -320,6 +320,12 @@
                   </div>
 
                   <hr>
+
+                  <!-- Item -->
+                  <div>
+                    <b class="text-muted">Toyhouse</b>
+                    <a class="px-4 cd-text-pre toyhouse">Link</a>
+                  </div>
                   
                   <!-- Item -->
                   <div>
