--- a/inventories.html
+++ b/inventories.html
@@ -202,6 +202,10 @@
         <!-- Header -->
         <h2 class="card-header text-center p-4"><span class="text-capitalize username"></span></h2>
 
+        <div class="mx-auto my-2">
+           <a class="h3 px-4 cd-text-pre username"><i class="fas fa-house"></i></a>
+        </div>
+
         <!-- Nav Tabs -->
         <!-- ----------------------------------------------------------- -->
         <ul class="nav row no-gutters m-n1 py-4 px-md-5 px-4" id="profile-tabs" role="tablist">
