fixed TH linking for users

--- a/inventories.html
+++ b/inventories.html
@@ -203,7 +203,7 @@
         <h2 class="card-header text-center p-4"><span class="text-capitalize username"></span></h2>
 
         <div class="mx-auto my-2">
-           <a class="h3 px-4 cd-text-pre username"><i class="fas fa-house"></i></a>
+          <span class="socials"></span>
         </div>
 
         <!-- Nav Tabs -->
