added social links

--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
         <div class="col-lg-4 col-md-6 p-1">
           <h5>Community</h5>
           <div class="px-3">
-            <a class="btn btn-primary d-block mb-1" href="#">Toyhou.se</a>
-            <a class="btn btn-primary d-block mb-1" href="#">Discord</a>
+            <a class="btn btn-primary d-block mb-1" target="_blank" href="https://toyhou.se/~world/177642">Toyhou.se</a>
+            <a class="btn btn-primary d-block mb-1" target="_blank" href="https://discord.gg/W9frJ6TNKr
+">Discord</a>
             <a class="btn btn-primary d-block mb-1" href="prompts.html">Prompts</a>
           </div>
         </div>
@@ -101,7 +102,7 @@
         <div class="col-lg-4 col-md-6 p-1">
           <h5>Resources</h5>
           <div class="px-3">
-            <a class="btn btn-primary d-block mb-1" href="#">Help Desk</a>
+            <a class="btn btn-primary d-block mb-1" target="_blank" href="https://toyhou.se/~forums/55940.faq-help">Help Desk</a>
             <a class="btn btn-primary d-block mb-1" href="faq.html">FAQ</a>
             <a class="btn btn-primary d-block mb-1" href="terms.html">TOS</a>
           </div>
@@ -114,11 +115,8 @@
       <hr class="my-4">
       <div class="text-center mb-md-n4 font-weight-bold">
 
-        <a class="mx-3" href="#"><i class="fas fa-floppy-disk fa-fw mr-1"></i> Toyhou.se</a>
-        <a class="mx-3" href="#"><i class="fab fa-discord fa-fw mr-1"></i> Discord</a>
-        <a class="mx-3" href="#"><i class="fab fa-twitter fa-fw mr-1"></i> Twitter </a>
-        <a class="mx-3" href="#"><i class="fab fa-tumblr fa-fw mr-1"></i> Tumblr</a>
-        <a class="mx-3" href="#"><i class="fas fa-cloud fa-fw mr-1"></i> BlueSky</a>
+        <a class="mx-3" target="_blank" href="https://toyhou.se/~world/177642"><i class="fas fa-floppy-disk fa-fw mr-1"></i> Toyhou.se</a>
+        <a class="mx-3" target="_blank" href="https://discord.gg/W9frJ6TNKr"><i class="fab fa-discord fa-fw mr-1"></i> Discord</a>
 
       </div>
 
